Fixing Pizzas Layout On Mobile Screens

--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,16 @@ body {
   gap: 4.8rem;
 }
 
+@media screen and (max-width: 700px) {
+  .pizzas {
+    width: 85vw;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 20px;
+  }
+}
+
 .pizza {
   display: flex;
   gap: 3.2rem;
